feat [add]: Package punteggio